--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.appman.appmanager"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0.3"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -17,12 +17,41 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+}
+repositories {
+    mavenCentral()
+    maven { url 'http://guardian.github.com/maven/repo-releases' }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.android.support:support-v4:23.0.1'
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.getbase:floatingactionbutton:1.10.0'
+    compile 'com.afollestad:material-dialogs:0.7.9.1'
+    compile 'com.github.yukuku:ambilwarna:2.0'
+    compile 'com.pnikosis:materialish-progress:1.5'
+    compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    compile 'com.yalantis:phoenix:1.2.2'
+    compile('com.mikepenz:materialdrawer:4.0.5@aar') { transitive = true; }
+    compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
+    compile('net.rdrei.android.dirchooser:library:3.0@aar') { transitive = true; }
+    compile('com.mikepenz:aboutlibraries:5.2.1@aar') { transitive = true; }
+    compile 'com.github.paolorotolo:appintro:3.3.0'
 }
