AppManager Version 1.1 -- Enabled Haptic Feedback -- UI Changes -- Bugs Fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,14 +48,14 @@
     <activity android:name=".activities.ProcessActivity"/>
     <activity android:name=".activities.MemoryInfoActivity"/>
 
-    <receiver android:name=".utils.BootUpReceiver"
+    <!--<receiver android:name=".utils.BootUpReceiver"
         android:enabled="true"
         android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
             <category android:name="android.intent.category.DEFAULT"/>
         </intent-filter>
-    </receiver>
+    </receiver>-->
     </application>
 
 </manifest>
