--Commit for version 1.1.0 -- Changed MemoryInfoActivity UI. -- Added Dialog before clearing ram. -- Added ProgressBar for total and used ram calucalations. -- Created UI for Storage Details. -- Added entry in UtilsUI for navigation drawer for storage details.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
     <activity android:name=".activities.DeviceInfo"/>
         <activity android:name=".activities.ProcessActivity"/>
     <activity android:name=".activities.MemoryInfoActivity"/>
+        <activity android:name=".activities.StorageActivity"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
