--AppManager Version 1.1.1 --Added External Storage count and percentage -- Modified UI for RAM Status. -- Added StorageActivity, LoadStorageInBackground, StorageViewer, StorageSpaceHandler, StoragePercentageInBackground. -- Added Package for ProgressBars (NumberProgressbar, CircularProgressbar).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,9 @@
         android:name=".activities.SettingsActivity" />
     <activity
         android:name=".activities.AboutActivity" />
-    <activity
-        android:name=".activities.RamInfo" />
+    <activity android:name=".activities.RamInfo" />
+        <activity android:name=".activities.StorageActivity"
+            android:label="Storage Details"/>
     <activity android:name=".activities.DeviceInfo"/>
         <activity android:name=".activities.ProcessActivity"/>
     <activity android:name=".activities.MemoryInfoActivity"/>
