--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.getbase:floatingactionbutton:1.10.0'
-    compile 'com.afollestad:material-dialogs:0.7.9.1'
+    //compile 'com.afollestad:material-dialogs:0.7.9.1'
     compile 'com.github.yukuku:ambilwarna:2.0'
     compile 'com.pnikosis:materialish-progress:1.5'
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
@@ -69,5 +69,8 @@ dependencies {
     compile 'com.github.paolorotolo:appintro:3.3.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
+    }
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
+        transitive = true
     }
 }
