--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 2
-        versionName "1.1"
+        versionName "1.1.1"
         multiDexEnabled true
     }
     buildTypes {
@@ -39,6 +39,13 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+    dexOptions {
+        incremental true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 repositories {
     mavenCentral()
@@ -47,30 +54,30 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
-    compile 'com.getbase:floatingactionbutton:1.10.0'
-    //compile 'com.afollestad:material-dialogs:0.7.9.1'
-    compile 'com.github.yukuku:ambilwarna:2.0'
-    compile 'com.pnikosis:materialish-progress:1.5'
-    compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
-    compile 'com.yalantis:phoenix:1.2.2'
     compile('com.mikepenz:materialdrawer:4.0.5@aar') { transitive = true; }
-    compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
     compile('net.rdrei.android.dirchooser:library:3.0@aar') { transitive = true; }
     compile('com.mikepenz:aboutlibraries:5.2.1@aar') { transitive = true; }
-    compile 'com.github.paolorotolo:appintro:3.3.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
     compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
         transitive = true
     }
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.getbase:floatingactionbutton:1.10.0'
+    compile 'com.github.yukuku:ambilwarna:2.0'
+    compile 'com.pnikosis:materialish-progress:1.5'
+    compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    compile 'com.yalantis:phoenix:1.2.2'
+    compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
+    compile 'com.github.paolorotolo:appintro:3.3.0'
+    compile 'com.google.android.gms:play-services-ads:8.1.0'
 }
