--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.appman.appmanager">
 
-    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
-    <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".AppManagerApplication"
@@ -19,41 +22,50 @@
         android:supportsRtl="true"
         android:theme="@style/AppManager"
         tools:replace="android:theme">
-    <activity
-        android:name=".activities.MainActivity"
-        android:configChanges="keyboardHidden|orientation"
-        android:label="@string/app_name">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.SEARCH"
-                android:configChanges="keyboardHidden|orientation"/>
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action
+                    android:name="android.intent.action.SEARCH"
+                    android:configChanges="keyboardHidden|orientation" />
+            </intent-filter>
 
-        <meta-data
-            android:name="android.app.searchable"
-            android:resource="@xml/searchable" />
-    </activity>
-    <activity
-        android:name=".activities.AppActivity" />
-    <activity
-        android:name=".activities.SettingsActivity" />
-    <activity
-        android:name=".activities.AboutActivity" />
-    <activity android:name=".activities.RamInfo" />
-        <activity android:name=".activities.StorageActivity"
-            android:label="Storage Details"/>
-    <activity android:name=".activities.DeviceInfo"/>
-        <activity android:name=".activities.ProcessActivity"/>
-    <activity android:name=".activities.MemoryInfoActivity"/>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity android:name=".activities.AppActivity" />
+        <activity android:name=".activities.SettingsActivity" />
+        <activity android:name=".activities.AboutActivity" />
+        <activity android:name=".activities.RamInfo" />
+        <activity
+            android:name=".activities.StorageActivity"
+            android:label="Storage Details" />
+        <activity android:name=".activities.DeviceInfo" />
+        <activity android:name=".activities.ProcessActivity" />
+        <activity android:name=".activities.MemoryInfoActivity" />
+        <activity android:name=".activities.SmsActivity" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="fee6a286ef3615374dc431c85b45de6c947957e9" />
+        <!-- This meta-data tag is required to use Google Play Services. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
