--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
 
     <application
         android:name=".AppManagerApplication"
@@ -44,13 +46,10 @@
         <activity android:name=".activities.AppActivity" />
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.AboutActivity" />
-        <activity android:name=".activities.RamInfo" />
         <activity
             android:name=".activities.StorageActivity"
             android:label="Storage Details" />
         <activity android:name=".activities.DeviceInfo" />
-        <activity android:name=".activities.ProcessActivity" />
-        <activity android:name=".activities.MemoryInfoActivity" />
         <activity android:name=".activities.SmsActivity" />
 
         <meta-data
@@ -66,6 +65,14 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <activity android:name=".activities.MemoryCleanActivity"/>
+
+        <service
+            android:name=".service.CleanerService"
+            android:exported="false" />
+        <service
+            android:name=".service.CoreService"
+            android:exported="false" />
     </application>
 
 </manifest>
