commit for version 1.2 Added Google Ads, Changed UI for Ram info Added Storage UI, Added Services to scan & clear background processes -- Added FragmentStorage.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
         <activity android:name=".activities.MemoryCleanActivity"/>
+        <activity android:name=".activities.FragmentStorage"/>
 
         <service
             android:name=".service.CleanerService"
