--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     compile 'com.yalantis:phoenix:1.2.2'
     compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile 'com.github.rampo.updatechecker:library:2.1.8'
 }
