Commit for version 1.3 -> Added SMS backup utility. -> Added ActivityContacts and xml. -> Removed SMS Restoration functionality. -> Modified color combination of each activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,9 @@
             android:theme="@android:style/Theme.Translucent" />
         <activity android:name=".activities.MemoryCleanActivity"/>
         <activity android:name=".activities.FragmentStorage"/>
+        <activity android:name=".utils.MyFileManager"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+        <activity android:name=".activities.ActivityContacts"/>
 
         <service
             android:name=".service.CleanerService"
