Commit for version 1.4 -> Added Storage Functionality. -> Added After Memory Cleaned and xml. -> Modified Contacts UI functionality. -> Modified SMS UI functionality.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         <activity android:name=".utils.MyFileManager"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".activities.ActivityContacts"/>
+        <activity android:name=".activities.ActivityAfterMemoryCleaned"/>
 
         <service
             android:name=".service.CleanerService"
