--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -75,6 +76,8 @@
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".activities.ActivityContacts"/>
         <activity android:name=".activities.ActivityAfterMemoryCleaned"/>
+        <activity android:name=".activities.ActivityNoInternetConnection"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
 
         <service
             android:name=".service.CleanerService"
