--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:name=".AppManagerApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/hdd"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppManager"
@@ -72,8 +72,6 @@
             android:theme="@android:style/Theme.Translucent" />
         <activity android:name=".activities.MemoryCleanActivity"/>
         <activity android:name=".activities.FragmentStorage"/>
-        <activity android:name=".utils.MyFileManager"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".activities.ActivityContacts"/>
         <activity android:name=".activities.ActivityAfterMemoryCleaned"/>
         <activity android:name=".activities.ActivityNoInternetConnection"
