--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,10 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "com.appman.appmanager"
         minSdkVersion 15
@@ -34,7 +35,6 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
-
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
@@ -46,11 +46,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    productFlavors {
+    }
 }
 repositories {
     mavenCentral()
     maven { url 'http://guardian.github.com/maven/repo-releases' }
     maven { url 'https://maven.fabric.io/public' }
+
 }
 
 dependencies {
@@ -79,4 +82,5 @@ dependencies {
     compile 'com.yalantis:phoenix:1.2.2'
     compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile 'com.sromku:simple-storage:1.2.0'
 }
