Commit of version 2.0 - --> Working code for FragmentHome

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
                 android:resource="@xml/searchable" />
         </activity>
 
+        <activity android:name=".activities.ActivityAppDetail"/>
+
         <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
