--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,15 +83,15 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:cardview-v7:25.0.0'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
-
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.0'
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     // Bottom navigation bar
-    compile 'com.github.armcha:SpaceNavigationView:1.4.1'
-    compile 'com.ss.bottomnavigation:bottomnavigation:1.4.2'
+    compile 'com.roughike:bottom-bar:2.0.2'
     // Loader view
     compile 'com.elyeproj.libraries:loaderviewlibrary:1.2.2'
     // Diagonalify
@@ -102,4 +102,10 @@ dependencies {
     }
     // Check new app version
     compile 'com.github.jrvansuita:CheckNewAppVersionAvailable:v1.0.0'
+
+    // Fast vertical scroll RecyclerView
+    compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    // Pull-To-Refresh
+    compile 'com.yalantis:phoenix:1.2.2'
+
 }
