--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,10 +102,14 @@ dependencies {
     }
     // Check new app version
     compile 'com.github.jrvansuita:CheckNewAppVersionAvailable:v1.0.0'
-
     // Fast vertical scroll RecyclerView
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
     // Pull-To-Refresh
     compile 'com.yalantis:phoenix:1.2.2'
-
+    // Circular Image View
+    compile ('com.github.siyamed:android-shape-imageview:0.9.+@aar') {
+        transitive = true;
+    }
+    // Spark Button
+    compile 'com.github.varunest:sparkbutton:1.0.2'
 }
