--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,14 @@ apply plugin: 'io.fabric'
 android {
     signingConfigs {
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.appman.appmanager"
         minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 3
-        versionName "1.5"
+        targetSdkVersion 25
+        versionCode 4
+        versionName "1.6"
         multiDexEnabled true
     }
     buildTypes {
@@ -34,19 +34,25 @@ android {
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
+        disable "ResourceType"
     }
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
-    }
-    dexOptions {
-        incremental true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
     productFlavors {
+    }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'arm64-v8a', 'armeabi-v7a', 'armeabi'
+            universalApk true
+        }
     }
 }
 repositories {
@@ -62,17 +68,21 @@ dependencies {
     compile('com.mikepenz:materialdrawer:4.0.5@aar') { transitive = true; }
     compile('net.rdrei.android.dirchooser:library:3.0@aar') { transitive = true; }
     compile('com.mikepenz:aboutlibraries:5.2.1@aar') { transitive = true; }
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.4@aar') {
         transitive = true;
     }
     compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
         transitive = true
     }
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
+    //noinspection GradleCompatible
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    //noinspection GradleCompatible
+    compile 'com.android.support:cardview-v7:23.4.0'
+    //noinspection GradleCompatible
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'commons-io:commons-io:2.4'
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.getbase:floatingactionbutton:1.10.0'
@@ -83,4 +93,11 @@ dependencies {
     compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
     compile 'com.sromku:simple-storage:1.2.0'
+}
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:design:23.4.0'
+        force 'com.android.support:support-v4:23.4.0'
+        force 'com.android.support:appcompat-v7:23.4.0'
+    }
 }
