--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,14 +46,14 @@ android {
     }
     productFlavors {
     }
-    splits {
+    /*splits {
         abi {
             enable true
             reset()
             include 'x86', 'x86_64', 'arm64-v8a', 'armeabi-v7a', 'armeabi'
             universalApk true
         }
-    }
+    }*/
 }
 repositories {
     mavenCentral()
