--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,15 @@ android {
         applicationId "com.appman.appmanager"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 4
-        versionName "1.6"
+        versionCode 5
+        versionName "1.7"
         multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,23 +39,21 @@ android {
         disable "ResourceType"
     }
     packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-    productFlavors {
-    }
-    /*splits {
-        abi {
-            enable true
-            reset()
-            include 'x86', 'x86_64', 'arm64-v8a', 'armeabi-v7a', 'armeabi'
-            universalApk true
-        }
-    }*/
 }
 repositories {
     mavenCentral()
@@ -92,7 +92,10 @@ dependencies {
     compile 'com.yalantis:phoenix:1.2.2'
     compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
-    compile 'com.sromku:simple-storage:1.2.0'
+    //Volly library for networking operation
+    compile 'com.android.volley:volley:1.0.0'
+    // Jsoup library
+    compile 'org.jsoup:jsoup:1.10.1'
 }
 configurations.all {
     resolutionStrategy {
