--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         android:theme="@style/AppManager"
         tools:replace="android:theme">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.ActivitySplash"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name">
             <intent-filter>
@@ -51,6 +51,7 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".activities.MainActivity"/>
         <activity android:name=".activities.AppActivity" />
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.AboutActivity" />
@@ -83,6 +84,13 @@
         <service
             android:name=".service.CoreService"
             android:exported="false" />
+        <service android:name=".service.NotificationAlarmService"
+            android:exported="false"/>
+        <receiver android:name=".service.NotificationAlarmService$CancelAlarmNotificationReceiver">
+            <intent-filter>
+                <action android:name="CANCEL_UPDATE"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
