--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,14 @@ apply plugin: 'io.fabric'
 android {
     signingConfigs {
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion versions.compileSdkVersion
+    buildToolsVersion "${versions.buildToolsVersion}"
     defaultConfig {
-        applicationId "com.appman.appmanager"
-        minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 6
-        versionName "1.7"
+        applicationId "${versions.applicationPkgName}"
+        minSdkVersion versions.minSdkVersion
+        targetSdkVersion versions.targetSdkVersion
+        versionCode versions.versionCode
+        versionName "${versions.versionName}"
         multiDexEnabled true
     }
     buildTypes {
@@ -65,6 +65,29 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
+    //noinspection GradleCompatible
+    compile "com.android.support:appcompat-v7:${versions.supportLibVersion}"
+    compile 'com.android.support:multidex:1.0.1'
+    //noinspection GradleCompatible
+    compile "com.android.support:recyclerview-v7:${versions.supportLibVersion}"
+    //noinspection GradleCompatible
+    compile "com.android.support:cardview-v7:${versions.supportLibVersion}"
+    compile "com.android.support:support-v4:${versions.supportLibVersion}"
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.getbase:floatingactionbutton:1.10.0'
+    compile 'com.github.yukuku:ambilwarna:2.0'
+    compile 'com.pnikosis:materialish-progress:1.5'
+    compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    compile 'com.yalantis:phoenix:1.2.2'
+    compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
+    compile "com.google.android.gms:play-services-ads:${versions.playServicesAd}"
+    //Volly library for networking operation
+    compile 'com.android.volley:volley:1.0.0'
+    // Jsoup library
+    compile 'org.jsoup:jsoup:1.10.1'
+
     compile('com.mikepenz:materialdrawer:4.0.5@aar') { transitive = true; }
     compile('net.rdrei.android.dirchooser:library:3.0@aar') { transitive = true; }
     compile('com.mikepenz:aboutlibraries:5.2.1@aar') { transitive = true; }
@@ -74,33 +97,11 @@ dependencies {
     compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
         transitive = true
     }
-    //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:multidex:1.0.1'
-    //noinspection GradleCompatible
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    //noinspection GradleCompatible
-    compile 'com.android.support:cardview-v7:23.4.0'
-    //noinspection GradleCompatible
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
-    compile 'com.getbase:floatingactionbutton:1.10.0'
-    compile 'com.github.yukuku:ambilwarna:2.0'
-    compile 'com.pnikosis:materialish-progress:1.5'
-    compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
-    compile 'com.yalantis:phoenix:1.2.2'
-    compile 'com.mikepenz:google-material-typeface:1.2.0.1@aar'
-    compile 'com.google.android.gms:play-services-ads:8.1.0'
-    //Volly library for networking operation
-    compile 'com.android.volley:volley:1.0.0'
-    // Jsoup library
-    compile 'org.jsoup:jsoup:1.10.1'
 }
 configurations.all {
     resolutionStrategy {
-        force 'com.android.support:design:23.4.0'
-        force 'com.android.support:support-v4:23.4.0'
-        force 'com.android.support:appcompat-v7:23.4.0'
+        force "com.android.support:design:${versions.supportLibVersion}"
+        force "com.android.support:support-v4:${versions.supportLibVersion}"
+        force "com.android.support:appcompat-v7:${versions.supportLibVersion}"
     }
 }
